{
  "version": 4,
  "terraform_version": "1.5.1",
  "serial": 532,
  "lineage": "f6c5d16d-f331-a773-b22d-b76e6bcf1dd9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dwn-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:416657610646:internet-gateway/igw-05be37b47da00e39c",
            "id": "igw-05be37b47da00e39c",
            "owner_id": "416657610646",
            "tags": {
              "Name": "dwn-IG"
            },
            "tags_all": {
              "Name": "dwn-IG"
            },
            "vpc_id": "vpc-0a01486af332334f0"
          },
          "dependencies": [
            "aws_vpc.dwn-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "dwn-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:416657610646:loadbalancer/app/dwn-LB/c614ceb32ebb26d3",
            "arn_suffix": "app/dwn-LB/c614ceb32ebb26d3",
            "desync_mitigation_mode": "defensive",
            "dns_name": "dwn-LB-494118649.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:416657610646:loadbalancer/app/dwn-LB/c614ceb32ebb26d3",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dwn-LB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-00d79a20705e1378f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a5561d70132edd98"
              },
              {
                "subnet_id": "subnet-0d2d218a267a26d25"
              }
            ],
            "subnets": [
              "subnet-0a5561d70132edd98",
              "subnet-0d2d218a267a26d25"
            ],
            "tags": {
              "Environment": "Test"
            },
            "tags_all": {
              "Environment": "Test"
            },
            "vpc_id": "vpc-0a01486af332334f0",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.dwn-lb-ssh-http",
            "aws_subnet.dwn-subnet-2a-1",
            "aws_subnet.dwn-subnet-2b-1",
            "aws_vpc.dwn-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "dwn-front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:416657610646:listener/app/dwn-LB/c614ceb32ebb26d3/88128dbed19ebd66",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:416657610646:targetgroup/dwn-lb-tg/e2804a857fa0d22a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:416657610646:listener/app/dwn-LB/c614ceb32ebb26d3/88128dbed19ebd66",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:416657610646:loadbalancer/app/dwn-LB/c614ceb32ebb26d3",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.dwn-lb",
            "aws_lb_target_group.dwn-TG",
            "aws_security_group.dwn-lb-ssh-http",
            "aws_subnet.dwn-subnet-2a-1",
            "aws_subnet.dwn-subnet-2b-1",
            "aws_vpc.dwn-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "dwn-TG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:416657610646:targetgroup/dwn-lb-tg/e2804a857fa0d22a",
            "arn_suffix": "targetgroup/dwn-lb-tg/e2804a857fa0d22a",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:416657610646:targetgroup/dwn-lb-tg/e2804a857fa0d22a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "dwn-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a01486af332334f0"
          },
          "dependencies": [
            "aws_vpc.dwn-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dwn-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:416657610646:route-table/rtb-0fc62ba03c02b5c37",
            "id": "rtb-0fc62ba03c02b5c37",
            "owner_id": "416657610646",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05be37b47da00e39c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dwn-RT"
            },
            "tags_all": {
              "Name": "dwn-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a01486af332334f0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.dwn-gw",
            "aws_vpc.dwn-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-2a-1-rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e79d3a50d7773d0a",
            "route_table_id": "rtb-0fc62ba03c02b5c37",
            "subnet_id": "subnet-0a5561d70132edd98"
          },
          "dependencies": [
            "aws_internet_gateway.dwn-gw",
            "aws_route_table.dwn-rt",
            "aws_subnet.dwn-subnet-2a-1",
            "aws_vpc.dwn-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-2b-1-rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b4da61a8995af142",
            "route_table_id": "rtb-0fc62ba03c02b5c37",
            "subnet_id": "subnet-0d2d218a267a26d25"
          },
          "dependencies": [
            "aws_internet_gateway.dwn-gw",
            "aws_route_table.dwn-rt",
            "aws_subnet.dwn-subnet-2b-1",
            "aws_vpc.dwn-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dwn-instance-ssh-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:416657610646:security-group/sg-0f5bcf8ff3c00fda9",
            "description": "Allow ssh-http inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f5bcf8ff3c00fda9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh from LB",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "http from LB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00d79a20705e1378f"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "instance-ssh-http",
            "name_prefix": "",
            "owner_id": "416657610646",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-ec2_ssh_http"
            },
            "tags_all": {
              "Name": "allow-ec2_ssh_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a01486af332334f0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.dwn-lb-ssh-http",
            "aws_vpc.dwn-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dwn-lb-ssh-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:416657610646:security-group/sg-00d79a20705e1378f",
            "description": "Allow ssh-http inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00d79a20705e1378f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http to LB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh to LB",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "lb_ssh-http",
            "name_prefix": "",
            "owner_id": "416657610646",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_lb_ssh_http"
            },
            "tags_all": {
              "Name": "allow_lb_ssh_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a01486af332334f0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dwn-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dwn-subnet-2a-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:416657610646:subnet/subnet-0a5561d70132edd98",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a5561d70132edd98",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "416657610646",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-subnet-1"
            },
            "tags_all": {
              "Name": "pub-subnet-1"
            },
            "vpc_id": "vpc-0a01486af332334f0"
          },
          "dependencies": [
            "aws_vpc.dwn-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dwn-subnet-2a-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:416657610646:subnet/subnet-087a1d4ed1fae313e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-087a1d4ed1fae313e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "416657610646",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-1"
            },
            "tags_all": {
              "Name": "private-subnet-1"
            },
            "vpc_id": "vpc-0a01486af332334f0"
          },
          "dependencies": [
            "aws_vpc.dwn-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dwn-subnet-2b-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:416657610646:subnet/subnet-0d2d218a267a26d25",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.10.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d2d218a267a26d25",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "416657610646",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-subnet-2"
            },
            "tags_all": {
              "Name": "pub-subnet-2"
            },
            "vpc_id": "vpc-0a01486af332334f0"
          },
          "dependencies": [
            "aws_vpc.dwn-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dwn-subnet-2b-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:416657610646:subnet/subnet-0f203a0c90077e590",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.10.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f203a0c90077e590",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "416657610646",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-2"
            },
            "tags_all": {
              "Name": "private-subnet-2"
            },
            "vpc_id": "vpc-0a01486af332334f0"
          },
          "dependencies": [
            "aws_vpc.dwn-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dwn-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:416657610646:vpc/vpc-0a01486af332334f0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0bdb690e80d84b4c9",
            "default_route_table_id": "rtb-06a758bb11870924d",
            "default_security_group_id": "sg-0516dcecd98a827fa",
            "dhcp_options_id": "dopt-03e8a27963ae891f7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a01486af332334f0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06a758bb11870924d",
            "owner_id": "416657610646",
            "tags": {
              "Name": "dwn-vpc"
            },
            "tags_all": {
              "Name": "dwn-vpc"
            }
          }
        }
      ]
    }
  ]
}